index.css
:root {
    --header-color: #181818;
    --body-color: #2c2e30;
    --border-color: #676767;
    --section-color: #007d9b;
    --text-color: #b3aaa3;
    --link-color: #21b0d3;
    --link-color-hover: #c6e9fb;
    --button-border-color-top-left: #cdaa78b5;
    --button-border-color-bottom-right: #cdaa7851;
    --card-color: #202226;
    --h1-color: #eee7dd;
    --h2-color: var(--h1-color);
    --h3-color: #cdaa78;
    --h4-color: #ebd9c2;


    --cursor-color: #a15700;
    --time-to-type: 0.9s;
    --animation-delay: 0.1s;
    --blink-duration: 1.4s;
}

/* Safari does not have Consolas font */
@font-face {
    font-family: 'SourceCodePro';
    src: url('/fonts/SourceCodePro-Regular.ttf') format('truetype');
}

html {
    font-family: Consolas, 'SourceCodePro', monospace;
    background-color: var(--body-color);
    color: var(--text-color);
}

body {
    margin: 0px;
}

h1 {
    color: var(--h1-color);
    font-size: 2.5rem;
    font-weight: bold;
    word-spacing: -4px;
}

h2 {
    color: var(--h2-color);
    font-size: 1.7rem;
    word-spacing: -2px;
    margin: 0px;
}

h3 {
    color: var(--h3-color);
    font-size: 1.3rem;
    margin-bottom: 0px;
}

h4 {
    color: var(--h4-color);
    font-size: 1.05rem;
    margin: 0px;
}

a {
    text-decoration: none;
    color: var(--link-color);
}

a:hover {
    color: var(--link-color-hover);
}

svg {
    vertical-align: middle;
}

/* HEADER  SECTION */

.about-me {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    gap: 25px;
    background-color: var(--header-color);
    color: var(--text-color);
    padding: 20px;
    /* border-bottom: 1px dashed var(--border-color); */
}

.about-me-img {
    border-radius: 50%;
    width: 150px;
}

.about-me-info {
    max-width: 600px;
}

.about-me-name {
    margin: 0;
    width: fit-content;
    text-transform: uppercase;
    position: relative;
}

.about-me-name::before,
.about-me-name::after {
    content: '';
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

.about-me-name::before {
    background-color: var(--header-color);
    animation: reveal-text var(--time-to-type) steps(13) var(--animation-delay) forwards;
}

.about-me-name::after {

    width: 14px;
    background-color: var(--cursor-color);
    animation: cursor var(--time-to-type) steps(13) var(--animation-delay) forwards,
        blink var(--blink-duration) calc(var(--animation-delay) + var(--time-to-type)) step-end infinite;
}

@keyframes reveal-text {
    to {
        left: 100%;
    }
}

@keyframes cursor {
    to {
        margin-left: 3px;
        left: 100%;
    }
}

@keyframes blink {
    50% {
        background-color: transparent;
    }
}

.about-me-job-title {
    margin-top: 0;
}

.about-me-links {
    list-style: none;
    padding-left: 0;
    display: flex;
    gap: 5px;
    word-spacing: -4px;
}

.resume-button {
    display: inline-block;
    padding: 3px 10px;
    background: var(--card-color);
    text-transform: uppercase;
    font-weight: bold;
    color: #b3aaa3;
    border-top: 1.5px solid var(--button-border-color-top-left);
    border-left: 1.5px solid var(--button-border-color-top-left);
    border-right: 2.5px solid var(--button-border-color-bottom-right);
    border-bottom: 2.5px solid var(--button-border-color-bottom-right);
    border-radius: 2px;
}

.resume-button:hover {
    color: #d3cac1;
    background-color: #3c3737;
}

.resume-button:active {
    transform: translate(1px, 1px);
}



/* MAIN SECTION */

.main-grid {
    display: grid;
    grid-template-columns: 2fr 1fr;
    max-width: 1100px;
    gap: 20px;
    padding: 24px;
    margin: auto;
}



/* PROJECTS SECTION */

.grid-cell-2f {
    padding: 20px;
    border: 1px solid var(--border-color);
}

.projects-header {
    display: flex;
    align-items: center;
    margin-bottom: 20px;
}

.projects-header::before,
.projects-header::after {
    content: "";
    flex: 1;
    border-bottom: 2px dashed var(--border-color);
    margin: 0 10px;
}

.projects-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
}

.project-card {
    background: var(--card-color);
    border-radius: 6px;
    transition: transform 0.5s linear(0 0%, 0 1.8%, 0.01 3.6%, 0.03 6.35%, 0.07 9.1%, 0.13 11.4%, 0.19 13.4%, 0.27 15%, 0.34 16.1%, 0.54 18.35%, 0.66 20.6%, 0.72 22.4%, 0.77 24.6%, 0.81 27.3%, 0.85 30.4%, 0.88 35.1%, 0.92 40.6%, 0.94 47.2%, 0.96 55%, 0.98 64%, 0.99 74.4%, 1 86.4%, 1 100%);
}

.project-card:hover {
    transform: scale(1.02);
}

.card-image {
    width: 100%;
    aspect-ratio: 16/9;
    object-fit: cover;
    border-radius: 6px 6px 0 0;
}

.card-languages {
    text-transform: uppercase;
    font-size: 1rem;
    font-weight: 600;
    color: var(--link-color);
    margin: 10px 12px 0px 12px;
}

.card-title {
    font-size: 1.3rem;
    font-weight: 600;
    color: var(--h1-color);
    margin: 10px 12px 0px 12px;
}

.card-description {
    font-size: 0.9rem;
    color: var(--text-color);
    height: 130px;
    overflow-y: auto;
    margin: 7px 12px 0px 12px;
}

.card-links {
    margin: 15px 12px 0px 12px;
    padding-bottom: 12px;
    font-size: 0.85rem;
    font-weight: 600;
}




/* EDUCATION AND SKILLS SECTION */

.grid-cell-1f {
    padding: 20px;
    height: fit-content;
    border: 1px solid var(--border-color);
}

.education-section {
    margin-bottom: 30px;
}

.education-section h2,
.skills-section h2 {
    border-left: 6px solid var(--section-color);
    padding-left: 6px;
    margin-bottom: 0px;
}

.education-section ul,
.skills-section ul {
    padding-left: 0px;
    margin-top: 6px;
    margin-bottom: 0px;
}

.education-section li,
.skills-section li {
    display: flex;
    color: var(--text-color);
    gap: 4px;
}

.relavent-coursework {
    margin-top: 16px;
}

.skills-section li {
    list-style: none;
}

.education-section li::before {
    content: "•";
}

.skills-section li::before {
    content: "-";
}

.skills-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.education-section em {
    display: flex;
    flex: 1;
}

.education-section em::before {
    flex: 1;
    content: '';
    border-bottom: 1.5px dotted var(--text-color);
    margin-bottom: 2px;
    margin-right: 4px;
}


footer {
    display: flex;
    justify-content: center;
    background-color: var(--header-color);
    /* border-top: 1px dashed var(--border-color); */
    padding: 10px;
    text-align: center;
}


/* MOBILE LAYOUT */

@media (width < 768px) {
    .about-me {
        flex-direction: column;
        align-items: center;
    }

    .about-me-info {
        display: flex;
        flex-direction: column;
        align-items: center;
        text-align: center;
    }

    .resume-button {
        margin-top: 12px;
    }

    .main-grid {
        grid-template-columns: 1fr;
        padding: 20px 10px;
        justify-items: center;
    }

    .card-description {
        height: auto;
    }

}

@media (width < 576px) {
    .projects-container {
        grid-template-columns: 1fr;
        gap: 30px
    }

    .projects-section {
        max-width: 350px;
    }
}

